# terrapyne

./: .gitignore  .importlinter  .pre-commit-config.yaml  AGENTS.md  BRANCH_SUMMARY.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  FEEDBACK.md  GEMINI.md  Makefile  README.md  SECURITY.md  TODO.md  WORKSPACE_ENRICHMENT_ANALYSIS.md  pr_body.md  pyproject.toml  reproduce_rich_output.py  reproduce_runner.py  requirements.txt  test_click_stderr.py  tmp-CONTEXT.md  verify_error_output.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: pytest.yaml
docs/: PLAN_PARSER_RESOURCES.md  README.md  SDK.md  terraform-plan-parser-analysis.md
docs/adr/: ADR-001-standardized-api-access.md  ADR-002-plan-parser-strategy.md  ADR-003-log-streaming-strategy.md  ADR-004-response-caching.md
docs/architecture/: ADR-001-workspace-dashboard-design.md  ADR-003-api-include-parameters.md  README.md  c4-l3-components.md
docs/explanation/: README.md  bdd-specifications.md  design-philosophy.md  plan-parser.md
docs/explanation/architecture/: ADR-002-run-model-enrichment.md  ADR-004-workspace-dashboard-testing.md  README.md  c4-l1-system-context.md  c4-l2-containers.md
docs/guides/: README.md  bdd-specifications.md  commits-and-review.md  python-and-testing.md
docs/how-to/: README.md  list-workspaces-by-project.md  python-and-testing.md
docs/reference/: README.md  cli-reference.md  platform-dependency-mapping.md  sdk.md
docs/tutorials/: README.md  quickstart.md
examples/: 01_list_runs.py  02_create_plan.py  03_batch_workspace_vars.py  04_clone_workspace.py  05_parse_plan.py  README.md
src/terrapyne/: __init__.py  __main__.py  exceptions.py  logging.py  terrapyne.py  utils.py
src/terrapyne/api/: __init__.py  client.py  projects.py  runs.py  state_versions.py  teams.py  vcs.py  workspace_clone.py  workspaces.py
src/terrapyne/cli/: __init__.py  debug_cmd.py  main.py  project_cmd.py  run_cmd.py  state_cmd.py  team_cmd.py  utils.py  vcs_cmd.py  workspace_cmd.py
src/terrapyne/core/: backend.py  browser.py  context.py  credentials.py  exceptions.py  local_binary.py  plan_parser.py  state_diff.py  utils.py
src/terrapyne/models/: __init__.py  apply.py  plan.py  project.py  run.py  state_version.py  team.py  team_access.py  utils.py  variable.py  vcs.py  workspace.py
src/terrapyne/rendering/: __init__.py  logging.py  rich_tables.py  table_renderer.py
src/terrapyne/sdk/: __init__.py
src/terrapyne/utils/: __init__.py  browser.py  context.py  logging.py  rich_tables.py  rich_tables.py.main  table_renderer.py
tests/: conftest.py  test_config.py  test_terrapyne_base.py  test_version.py
tests/features/: caching.feature  costs.feature  debug_mode.feature  json_output.feature  plan_parser_core.feature  plan_parser_integration.feature  plan_parser_resources.feature  plan_parser_summary.feature  project.feature  project_context.feature  run.feature  run_details.feature  run_diagnostics.feature  run_lifecycle.feature  run_listing.feature  run_wait.feature  search_optimization.feature  state_management.feature  state_raw_output.feature  team.feature  terrapyne_plan_parser_bdd.feature  vcs.feature  workspace.feature  workspace_dashboard.feature  workspace_enrichment.feature
tests/fixtures/: __init__.py  api_responses.py  factories.py
tests/fixtures/credentials/: credentials.tfrc.json
tests/fixtures/plan_outputs/: basic_create.stdout.txt  basic_destroy.stdout.txt  basic_replace.stdout.txt  basic_update.stdout.txt  data_source_error_not_found.stdout.txt  indexed_resources.stdout.txt  missing_end_marker.stdout.txt  missing_start_marker.stdout.txt  multiple_errors.stdout.txt  no_changes.stdout.txt  plan_summary_with_imports.stdout.txt  plan_summary_zero_counts.stdout.txt  rds_import_operations.stdout.txt  rds_module_addresses.stdout.txt  rds_tag_changes.stdout.txt  tainted_resource.stdout.txt  tfc_incomplete_plan.stdout.txt  tfc_json_with_errors.stdout.txt  tfc_mixed_content.stdout.txt  validation_error_invalid_error_message.stdout.txt  windows_line_endings.stdout.txt  (+9 more)
tests/test_api/: __init__.py  test_caching.py  test_client.py  test_models.py  test_plans.py  test_projects.py  test_runs.py  test_state_versions.py  test_teams.py  test_vcs.py  test_workspace_clone.py  test_workspaces.py
tests/test_cli/: __init__.py  test_api_access_pattern.py  test_cache_bdd.py  test_costs_bdd.py  test_debug_flag.py  test_debug_mode_bdd.py  test_json_output_bdd.py  test_json_output_show.py  test_main_cli.py  test_plan_parser_bdd.py  test_project_commands.py  test_project_context_bdd.py  test_project_snapshot.py  test_run_commands.py  test_run_errors_bdd.py  test_run_log_streaming.py  test_run_stream_logs.py  test_run_wait_bdd.py  test_search_optimization_bdd.py  test_state_management_bdd.py  test_state_outputs_raw.py  test_state_raw_output.py  test_state_raw_output_bdd.py  test_team_cli.py  test_vcs_commands.py  test_workspace_commands.py  test_workspace_dashboard_bdd.py  test_workspace_enrichment_bdd.py  test_workspace_json_enrichment.py
tests/test_docs/: test_adr004.py  test_cli_reference.py  test_howto.py  test_plan_parser_doc.py  test_sdk_reference.py
tests/test_rendering/: __init__.py  test_table_renderer.py  test_table_renderer_base.py
tests/uat/: conftest.py  test_tfc_api.py
tests/unit/: test_backend_detection.py  test_browser.py  test_cache.py  test_cli_quiet_mode.py  test_context.py  test_credentials.py  test_credentials_edge.py  test_example.py  test_exceptions_and_main.py  test_log_streaming.py  test_logging_usage.py  test_misc.py  test_models_apply.py  test_models_team_access.py  test_models_variable.py  test_plan_parser.py  test_project_find_perf.py  test_pydantic_deprecations.py  test_run_id_rendering.py  test_runs_api_critical.py  test_sdk_and_utils.py  test_sdk_namespace.py  test_state_diff.py  test_teams.py  test_tfc_client.py  test_vcs_model.py  test_vcs_models.py  test_version.py  test_workspace_clone_logic.py  test_workspace_cmd_imports.py  test_workspace_context.py  test_workspace_latest_run_type.py
(+2 files in other folders)
