[project]
name = "terrapyne"
version = "0.1.0"
description = "Wrapper around terraform"
readme = "README.md"
requires-python = ">=3.12,<4.0"
authors = []
license = { text = "Apache License Version 2.0" }

keywords = ["terraform", "wrapper"]

classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "httpx>=0.27.0",
    "pydantic>=2.6.0",
    "rich>=13.7.0",
    "typer>=0.9.0",
    "python-dotenv>=1.0.1",
    "tenacity>=8.2.0",
    "pyyaml>=6.0.1",
    "python-benedict>=0.33.0",
]

[project.scripts]
terrapyne = "terrapyne.cli.main:app"
tfc = "terrapyne.cli.main:app"

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
    "pytest-httpx>=0.30.0",
    "pytest-mock>=3.12.0",
    "pytest-bdd>=7.1.0",
    "pytest-xdist>=3.5.0",
    "pytest-asyncio>=0.23.0",
    "anyio>=4.3.0",
    "mypy>=1.8.0",
    "ruff>=0.3.0",
    "pre-commit>=3.6.0",
    "types-pyyaml>=6.0.12.12",
    "types-setuptools>=69.1.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --cov=terrapyne --cov-report=term-missing --cov-report=html --cov-fail-under=67"
asyncio_mode = "strict"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "PL", "RUF"]
# Ignored rules:
# - PLR0913/PLR0915: too-many-arguments/too-many-returns - common in large apps
# - PLC0415: import-outside-top-level - used intentionally for lazy imports and circular deps
# - E501: line-too-long - mature codebases often exceed 100 chars for clarity
# - PLR2004: magic-value-comparison - pervasive in structured parsing/config
# - PLR0912/PLR0911: too-many-branches/too-many-returns - valid for CLI state machines
# - PLW1510: subprocess-run-without-check - checked via exception handling instead
# - PLW2901: redefined-loop-name - rare edge case, not worth refactoring
ignore = ["PLR0913", "PLR0915", "PLC0415", "E501", "PLR2004", "PLR0912", "PLR0911", "PLW1510", "PLW2901"]

[tool.ruff.lint.isort]
known-first-party = ["terrapyne"]

[tool.mypy]
python_version = "3.12"
strict = false
warn_return_any = false
disallow_untyped_defs = false
ignore_missing_imports = true
namespace_packages = true

# Check only src, exclude legacy files pending refactor
files = ["src"]
exclude = ["src/terrapyne/logging.py", "src/terrapyne/terrapyne.py"]
